# nexus-chat-server

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
backend/: auth.py  config.py  conversations.py  main.py  orchestrator.py  sandbox_sessions.py
backend/mcp/: client.py
backend/providers/: ollama_provider.py
backend/tools/: __init__.py  builtin.py  file_generator.py  graph_plotter.py
config/: settings.server.yaml  settings.yaml
data/downloads/: FIFA_World_Cup_Winners.doc.docx
data/files/: US_State_Capitals.docx
frontend/src/: App.jsx
frontend/src/components/: AccountPopup.jsx  AdminPanel.jsx  CanvasPanel.jsx  ChatMessage.jsx  MCPDiscoveryPanel.jsx  Sidebar.jsx  SignInScreen.jsx  SplashScreen.jsx
frontend/src/hooks/: api.js  useChat.js
frontend/src/styles/: global.css
sandbox/: Dockerfile  server.py
scripts/: apply-server-patches.sh  update-from-upstream.sh
scripts/server-patches/: 01-remove-non-ollama-providers.patch  02-conversation-user-dir.patch  nexus-chat-server.patch
